# probabilities-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  DiscreteDistribution.h  ProbabilitiesLab1.cpp  config.txt  utilities.h
